@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.4.0 (pending)
 ==========================
 
+- Added editable dimension option to the DTypeChooser edit widget
 - Support click, drag, and release connection creation mode
 - Open the properties panel after making a signal/slots connection
 - Implement block mouse tracking for dynamic port text rendering
